# ChangeLog for app-misc/srm
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/srm/ChangeLog,v 1.4 2004/06/08 20:40:31 dholm Exp $

  08 Jun 2004; David Holm <dholm@gentoo.org> srm-1.2.8.ebuild:
  Added to ~ppc.

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  srm-1.2.7.ebuild, +srm-1.2.8.ebuild:
  version bump. 1.2.7 x86 stable

  20 Feb 2004; Dylan Carlson <absinthe@gentoo.org> srm-1.2.7.ebuild:
  added amd64 keyword.

*srm-1.2.7 (19 Jan 2004)

  19 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> srm-1.2.7.ebuild:
  initial commit; ebuild based on the one provided by Dennis Nienhuser via bug
  38348
