@@ -1,6 +1,6 @@
 MD5 34cfad023d0bf574502ebfaecdb42e23 ChangeLog 706
-MD5 0b271c3c8087bcc2f893b52fa68b412a srm-1.2.7.ebuild 841
+MD5 ceb1a20434781ddbeb7f7040ee5b0c25 srm-1.2.7.ebuild 890
+MD5 9edc079760a75131979ef8f05cf117da srm-1.2.8.ebuild 921
 MD5 1652522405f5936eb29776ef8d5ffa5b metadata.xml 310
-MD5 ff01b070dee460a97d2ae4b89286a842 srm-1.2.8.ebuild 896
-MD5 7dc868eb012c0f54a4e79d8ac08642e4 files/digest-srm-1.2.7 60
 MD5 e469f23d9b6417562322917123364dcf files/digest-srm-1.2.8 60
+MD5 7dc868eb012c0f54a4e79d8ac08642e4 files/digest-srm-1.2.7 60
