@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/srm/Attic/srm-1.2.7.ebuild,v 1.3 2004/06/07 08:51:54 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/srm/Attic/srm-1.2.7.ebuild,v 1.4 2004/06/08 21:48:28 dragonheart Exp $
 
 DESCRIPTION="A command-line compatible rm which destroys file contents before unlinking."
 HOMEPAGE="http://sourceforge.net/projects/srm"
@@ -12,6 +12,9 @@ SLOT="0"
 IUSE=""
 
 DEPEND="virtual/glibc"
+
+RDEPEND="virtual/glibc
+	!app-misc/secure-delete"
 
 src_install () {
 	make DESTDIR="${D}" install || die "make install failed"
