@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/srm
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/srm/ChangeLog,v 1.4 2004/06/08 20:40:31 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/srm/ChangeLog,v 1.5 2004/06/08 21:48:28 dragonheart Exp $
+
+  09 Jun 2004; Daniel Black <dragonheart@gentoo.org> srm-1.2.7.ebuild,
+  srm-1.2.8.ebuild:
+  Added dependancies. Add conflict with package app-misc/secure-delete as per
+  bug #53321. Thanks to reporter Daniel Webert <daniel_webert@web.de> and
+  solution provider Peter Jensen <t3xjuqlt02@sneakemail.com>.
 
   08 Jun 2004; David Holm <dholm@gentoo.org> srm-1.2.8.ebuild:
   Added to ~ppc.
